fixed mobile gap?

--- a/colmar/resources/css/style.css
+++ b/colmar/resources/css/style.css
@@ -114,7 +114,7 @@ header .container {
 }
 
 .rightsec {
-  width: 440px;
+  width: 40%;
 }
 
 .tagline {
